--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -20,4 +20,5 @@
 // @import 'components/toy-preview';
 // @import 'components/toy-edit';
 // @import 'components/dashboard';
-// @import 'components/map';
+@import 'components/board-app';
+@import 'components/navbar';
