board-header initial

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,13 +11,4 @@
 @import 'basics/fonts';
 
 // COMPONENTS
-// @import 'components/main-header';
-// @import 'components/main-footer';
-// @import 'components/homepage';
-// @import 'components/add-toy';
-// @import 'components/filter-toy';
-// @import 'components/toy-detail';
-// @import 'components/toy-preview';
-// @import 'components/toy-edit';
-// @import 'components/dashboard';
-// @import 'components/map';
+@import 'components/board-header';
