--- a/src/styles/components/_board-header.scss
+++ b/src/styles/components/_board-header.scss
@@ -33,7 +33,7 @@
                 border-radius: 5px;
                 padding: 3px 10px;
 
-                &:hover {
+                &:focus {
                     box-shadow: 0 0 1px 1px #2c3e50;
                 }
             }
@@ -56,7 +56,7 @@
                 border-radius: 5px;
                 padding: 3px 10px;
 
-                &:hover {
+                &:focus {
                     box-shadow: 0 0 1px 1px #2c3e50;
                 }
             }
