Added groups and action for each one

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,6 +14,7 @@
 @import 'components/board.list';
 @import 'components/board.preview';
 @import 'components/board-header';
+@import 'components/group-list';
 // @import 'components/main-header';
 // @import 'components/main-footer';
 // @import 'components/homepage';
