--- a/src/styles/components/_board-header.scss
+++ b/src/styles/components/_board-header.scss
@@ -1,8 +1,9 @@
 .board-header {
     @include flex(center, center, column);
+    gap: 15px;
     // flex-direction: column;
     width: 90%;
-    margin: 0 auto;
+    margin: 0 auto 20px auto;
 
     .board-info {
         @include flex(space-between, center, row);
@@ -16,8 +17,15 @@
         }
 
         .board-title .main-title {
-            flex: 6;
-            width: 100%;
+            @include flex(center, center, row);
+            gap: 10px;
+
+            button {
+                padding: 0;
+                border: none;
+            }
+            // flex: 6;
+            // width: 100%;
             h2,
             input {
                 text-align: left;
@@ -31,7 +39,7 @@
                 outline: none;
                 transition: 0.2s;
                 border-radius: 5px;
-                padding: 3px 10px;
+                padding: 3px 0px;
 
                 &:focus {
                     box-shadow: 0 0 1px 1px #2c3e50;
@@ -41,8 +49,7 @@
 
         .board-title .sub-title {
             width: 100%;
-            p,
-            input {
+            p {
                 text-align: left;
                 color: #2c3e50;
                 width: 100%;
@@ -54,7 +61,7 @@
                 outline: none;
                 transition: 0.2s;
                 border-radius: 5px;
-                padding: 3px 10px;
+                padding: 3px 0px;
 
                 &:focus {
                     box-shadow: 0 0 1px 1px #2c3e50;
@@ -74,38 +81,14 @@
             padding: 0;
         }
 
-        ul {
-            list-style-type: none;
-
-            li {
-                @include flex(center, center, row);
-                font-family: Lato;
-                font-weight: 600;
-                border: 2px solid #f4f4f4;
-                width: 50px;
-                height: 50px;
-                border-radius: 50%;
-            }
+        .avatar {
+            width: 25%;
         }
     }
 
     .board-actions {
         @include flex(start, center, row);
         width: 100%;
-        // justify-content: start;
-
-        .board-filter {
-            @include flex(center, center, row);
-            gap: 5px;
-
-            button,
-            input,
-            select {
-                padding: 5px 10px;
-                border-radius: 5px;
-                outline: none;
-                border: 2px solid #afafaf;
-            }
-        }
+        gap: 5px;
     }
 }
