sync in team meeting with Eden

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -26,3 +26,5 @@
 @import 'components/task-preview';
 @import 'components/board-app';
 @import 'components/navbar';
+@import 'components/status-picker';
+@import 'components/status-column';
