task action more

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -20,8 +20,8 @@
 // @import 'components/homepage';
 // @import 'components/add-toy';
 // @import 'components/filter-toy';
-// @import 'components/toy-detail';
-// @import 'components/toy-preview';
+@import 'components/task-details';
+@import 'components/board-details';
 @import 'components/task-list';
 @import 'components/task-preview';
 @import 'components/board-app';
