initial person picker

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -28,3 +28,6 @@
 @import 'components/navbar';
 @import 'components/status-picker';
 @import 'components/status-column';
+@import 'components/person-column';
+@import 'components/person-picker';
+@import 'components/person-preview';
