Added draggable for groups

--- a/src/styles/components/_board-header.scss
+++ b/src/styles/components/_board-header.scss
@@ -49,7 +49,8 @@
 
         .board-title .sub-title {
             width: 100%;
-            p {
+            p,
+            input {
                 text-align: left;
                 color: #2c3e50;
                 width: 100%;
