--- a/src/styles/components/_group-list.scss
+++ b/src/styles/components/_group-list.scss
@@ -1,5 +1,19 @@
 .group-list {
     margin-top: 20px;
+    .flip-list-move {
+        transition: transform 0.5s;
+    }
+
+    .ghost {
+        border-left: 5px solid #555;
+        box-shadow: 10px 10px 5px -1px rgba(0, 0, 0, 0.14);
+        opacity: 0.7;
+    }
+
+    .sortable-drag {
+        opacity: 0;
+    }
+
     ul {
         @include flex(start, start, column);
         gap: 5px;
@@ -7,12 +21,11 @@
         font-family: Lato;
         font-weight: 600;
         padding-inline: 20px;
-        // background-color: #e4e4e4;
         margin-bottom: 15px;
-        .group-details{
+        .group-details {
             @include flex(start, start, row);
         }
-        
+
         li {
             padding: 5px 10px;
 
