--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -28,6 +28,7 @@
 @import 'components/navbar';
 @import 'components/status-picker';
 @import 'components/status-column';
+@import 'components/status-item';
 @import 'components/person-column';
 @import 'components/person-picker';
 @import 'components/person-preview';
