--- a/src/styles/components/_board.list.scss
+++ b/src/styles/components/_board.list.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 200px;
-    background-color: lightblue;
+    // background-color: lightblue;
 
     &::after {
         content: ':'
