--- a/src/styles/components/_person-picker.scss
+++ b/src/styles/components/_person-picker.scss
@@ -7,9 +7,39 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 300px;
+    width: 100%;
+    padding: .3rem;
+    border: 1px solid rgb(241, 240, 240);
+    border-radius: 8px;
     
+    .delegate-list, .member-list{
+        width: 100%;
+        padding: .3rem;
+        background-color: #f8f8f8;
+    }
+    .delegate-list{
+        border-bottom: 1px solid rgb(194, 194, 194);
+    }
 }
-.delegate-list{
-    border-bottom: 1px solid black;
+
+// Vue transitions
+
+.person-picker-enter, .person-picker-leave-to {
+    opacity: 0;
 }
+
+.person-picker-enter-active, .person-picker-leave-active {
+    transition: .2s ease-in;
+}
+
+.person-list-enter-active, .person-list-leave-active {
+    transition: all .6s;
+}
+.person-list-enter, .person-list-leave-to {
+    opacity: 0;
+    transform: translateY(-30px);
+}
+.person-list-move {
+    transition: transform .8s;
+}
+  
