--- a/src/styles/components/_status-picker.scss
+++ b/src/styles/components/_status-picker.scss
@@ -7,6 +7,19 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100px;
+    width: 100%;
     border: 1px solid lightgray;
+    gap: 5px;
+    padding: .3rem;
+    transition: .2s;
+}
+
+// Vue transitions
+
+.status-picker-enter, .status-picker-leave-to{
+    opacity: 0;
+}
+
+.status-picker-enter-active, .status-picker-leave-active{
+    transition: opacity .2s ease-in;
 }
