After a lot of css and fixing bugs

--- a/src/styles/components/_board-details.scss
+++ b/src/styles/components/_board-details.scss
@@ -1,5 +1,6 @@
-.board-details{
-    .main-board{
+.board-details {
+    // padding-top: 20px;
+    .main-board {
         // @include flex(start, start, row);
     }
 }
