--- a/src/styles/basics/_fonts.scss
+++ b/src/styles/basics/_fonts.scss
@@ -7,3 +7,8 @@
     font-family: Lobster;
     src: url('~@/assets/fonts/Lobster-Regular.ttf');
 }
+
+@font-face {
+    font-family: Roboto;
+    src: url('~@/assets/fonts/Roboto/Roboto-Regular.ttf');
+}
