--- a/src/styles/components/_board-header.scss
+++ b/src/styles/components/_board-header.scss
@@ -1,12 +1,11 @@
 .board-header {
-    @include flex(center, center, column);
+    @include flex(center, start, column);
     gap: 15px;
-    // flex-direction: column;
+    padding: 16px 30px 0 30px;
     width: 90%;
-    margin: 0 auto 20px auto;
 
     .board-info {
-        @include flex(space-between, center, row);
+        @include flex(space-between, start, row);
         width: 100%;
         font-family: Lato;
 
@@ -17,7 +16,7 @@
         }
 
         .board-title .main-title {
-            @include flex(center, center, row);
+            @include flex(start, center, row);
             gap: 10px;
 
             button {
@@ -29,20 +28,24 @@
             h2,
             input {
                 text-align: left;
-                color: #2c3e50;
+                color: #323338;
                 width: 100%;
                 height: 100%;
-                font-family: Lato;
+                font-family: Roboto;
                 font-weight: 600;
-                font-size: 1.5em;
+                font-size: 32px;
                 border: none;
+                border-radius: 2px;
                 outline: none;
                 transition: 0.2s;
-                border-radius: 5px;
-                padding: 3px 0px;
+                padding: 0px 4px;
+
+                &:hover {
+                    box-shadow: 0 0 1px 1px #c5c7d0;
+                }
 
                 &:focus {
-                    box-shadow: 0 0 1px 1px #2c3e50;
+                    box-shadow: 0 0 1px 1px #c5c7d0;
                 }
             }
         }
@@ -50,22 +53,27 @@
         .board-title .sub-title {
             width: 100%;
             p,
-            input {
+            textarea {
                 text-align: left;
-                color: #2c3e50;
+                color: #676879;
                 width: 100%;
                 height: 100%;
-                font-family: Lato;
+                line-height: 1.5;
+                font-family: Roboto;
                 font-weight: 400;
-                font-size: 1em;
+                font-size: 14px;
                 border: none;
+                border-radius: 2px;
                 outline: none;
                 transition: 0.2s;
-                border-radius: 5px;
-                padding: 3px 0px;
+                padding: 3px 4px;
+
+                &:hover {
+                    box-shadow: 0 0 1px 1px #c5c7d0;
+                }
 
                 &:focus {
-                    box-shadow: 0 0 1px 1px #2c3e50;
+                    box-shadow: 0 0 1px 1px #c5c7d0;
                 }
             }
         }
@@ -83,13 +91,13 @@
         }
 
         .avatar {
-            width: 25%;
+            width: 10%;
         }
     }
 
     .board-actions {
         @include flex(start, center, row);
-        width: 100%;
+        // width: 100%;
         gap: 5px;
     }
 }
