--- a/src/styles/components/_board.list.scss
+++ b/src/styles/components/_board.list.scss
@@ -1,12 +1,70 @@
-.board-list{
-    display: flex;
-    flex-direction: column;
-    width: 200px;
-    background-color: lightblue;
+.board-list {
+    @include flex(flex-start, start, column);
+    padding: 16px 14px;
+    width: 255px;
+    background-color: #ffffff;
+    border-right: 1px solid #e6e9ef;
+    font-family: Lato;
 
-    &::after {
-        content: ':'
+    .title {
+        font-size: rem(15px);
+        text-align: left;
+        color: rgb(107, 107, 107);
+        margin-bottom: 10px;
+    }
+
+    // &::after {
+    //     content: ':';
+    // }
+
+    .board-list-actions {
+        @include flex(center, start, column);
+        gap: 5px;
+        width: 100%;
+        padding-bottom: 20px;
+        border-bottom: 1px solid #ccc;
+        margin-bottom: 20px;
+
+        .action {
+            @include flex(start, center, row);
+            font-size: 1rem;
+            gap: 10px;
+            width: 100%;
+            padding-left: 6px;
+            transition: 0.2s;
+            height: 32px;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: rem(15px);
+
+            &:hover {
+                background-color: #c5c7d0;
+            }
+        }
+    }
+
+    .board-list-items {
+        @include flex(center, start, column);
+        gap: 5px;
+        width: 100%;
+
+        .board-preview {
+            @include flex(start, center, row);
+            font-size: 1rem;
+            gap: 10px;
+            width: 100%;
+            padding-left: 6px;
+            transition: 0.2s;
+            height: 32px;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: rem(15px);
+
+            &:hover {
+                background-color: #c5c7d0;
+            }
+        }
     }
 }
 
-
+// #e6e9ef
