--- a/src/styles/components/_group-list.scss
+++ b/src/styles/components/_group-list.scss
@@ -10,6 +10,13 @@
         opacity: 0.7;
     }
 
+    .sortable {
+        .task-list {
+            width: 97%;
+            margin-left: 3%;
+        }
+    }
+
     .sortable-drag {
         opacity: 0;
     }
@@ -20,7 +27,8 @@
         list-style-type: none;
         font-family: Lato;
         font-weight: 600;
-        padding-inline: 20px;
+        // padding-inline: 20px;
+        margin: 0;
         margin-bottom: 15px;
         .group-details {
             @include flex(start, start, row);
