--- a/src/styles/components/_person-picker.scss
+++ b/src/styles/components/_person-picker.scss
@@ -1,15 +1,20 @@
-.person-picker{
+.person-picker {
+    @include flex(flex-start, start, column);
     position: absolute;
     top: 2rem;
     left: 50%;
     transform: translateX(-50%);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 300px;
-    
-}
-.delegate-list{
-    border-bottom: 1px solid black;
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #c2c2c2;
+    border-radius: 8px;
+
+    .delegate-list {
+        border-bottom: 1px solid #818181;
+        width: 100%;
+    }
+
+    .member-list {
+        width: 100%;
+    }
 }
