--- a/src/styles/components/_person-preview.scss
+++ b/src/styles/components/_person-preview.scss
@@ -1,6 +1,14 @@
-.person-picker{
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    background-color: lightgray;
+.person-preview {
+    @include flex(flex-start, center, row);
+    gap: 10px;
+    padding: 5px 10px;
+    background-color: rgb(250, 250, 250);
+    font-family: Lato;
+    font-weight: 600;
+    cursor: pointer;
+    transition: 0.2s;
+
+    &:hover {
+        background-color: #ccc;
+    }
 }
