--- a/src/styles/components/_group-list.scss
+++ b/src/styles/components/_group-list.scss
@@ -35,14 +35,15 @@
         }
 
         li {
-            padding: 5px 10px;
+            padding: 5px;
+            margin-left: 5px;
 
             &:hover {
-                box-shadow: 0 0 2px 2px #dbdbdb;
+                box-shadow: 0 0 1px 1px #dbdbdb;
             }
         }
 
-         .el-dropdown {
+        .el-dropdown {
             button {
                 @include flex(center, center, row);
                 width: 30px;
@@ -53,13 +54,14 @@
 
         input {
             border: none;
-            box-shadow: 0 0 2px 2px #dbdbdb;
+            box-shadow: 0 0 1px 1px #dbdbdb;
             background: transparent;
             outline: none;
             font-family: Lato;
             font-size: 1rem;
             font-weight: 600;
-            padding: 5px 10px;
+            padding: 5px;
+            margin-left: 5px;
         }
     }
 }
