after integration of person and status columns in task preview

--- a/src/styles/components/_status-column.scss
+++ b/src/styles/components/_status-column.scss
@@ -1,5 +1,11 @@
 .status-column{
     position: relative;
     width: 120px;
-
+    
+    .status-text{
+        @include flex;
+        height: 100%;
+        width: 100%;
+        color: whitesmoke;
+    }
 }
