--- a/src/styles/components/_task-preview.scss
+++ b/src/styles/components/_task-preview.scss
@@ -26,7 +26,8 @@
             }
         }
     }
-    .dinamic {
+    .dynamic-column {
+        @include flex(center, center);
         width: 150px;
         height: 100%;
         flex: 1;
