--- a/src/styles/components/_person-picker.scss
+++ b/src/styles/components/_person-picker.scss
@@ -8,13 +8,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
+    width: 230px;
     padding: 0.3rem;
     border: 1px solid rgb(241, 240, 240);
     border-radius: 8px;
+    z-index: 2;
 
-    .delegate-list,
-    .member-list {
+    .delegate-list, .member-list {
         width: 100%;
         padding: 0.3rem;
         background-color: #f8f8f8;
