--- a/src/styles/components/_status-picker.scss
+++ b/src/styles/components/_status-picker.scss
@@ -8,10 +8,12 @@
     align-items: center;
     justify-content: center;
     width: 100%;
+    background-color: whitesmoke;
     border: 1px solid lightgray;
     gap: 5px;
     padding: .3rem;
     transition: .2s;
+    z-index: 2;
 }
 
 // Vue transitions
