--- a/src/styles/setup/_mixins.scss
+++ b/src/styles/setup/_mixins.scss
@@ -65,7 +65,7 @@
 //   align-items: center;
 //   gap: 20px;
 // }
-@mixin flex($justify, $align, $direction) {
+@mixin flex($justify: center, $align: center, $direction: row) {
     display: flex;
     justify-content: $justify;
     align-items: $align;
