--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -20,7 +20,7 @@
 // @import 'components/main-footer';
 // @import 'components/homepage';
 // @import 'components/add-toy';
-// @import 'components/filter-toy';
+@import 'components/home';
 @import 'components/task-details';
 @import 'components/board-details';
 @import 'components/task-list';
