--- a/src/styles/components/_task-list.scss
+++ b/src/styles/components/_task-list.scss
@@ -1,17 +1,32 @@
-.task-list{
-    width:100%;
-    input{
-        height: 35px;
-        width: 99.5%;
+.task-list {
+    width: 100%;
+    form{
+        position: relative;
+        left: 0;
+        margin-left: -2px;
+    }
+    input {
 
+        position: relative;
+        left: 0;
+        height: 35px;
+        width: 99.2%;
+        margin-left: 0;
         border: none;
-   
+        box-shadow: 0 0 1px 1px #dbdbdb;
+        background: transparent;
+        outline: none;
+        font-family: Lato;
+        font-size: 1rem;
+        font-weight: 600;
+        padding: 5px;
+        border: none;
+
         // box-shadow: 0 2px 10px black;
     }
-    .style-task{
+    .style-task {
         border-inline-start: 6px rgb(55, 55, 105) solid;
         padding-inline-start: 5px;
         // margin: 2px;
-        
     }
 }
