--- a/src/styles/components/_group-list.scss
+++ b/src/styles/components/_group-list.scss
@@ -6,8 +6,10 @@
 
     .ghost {
         border-left: 5px solid #555;
+        background: #c8ebfb;
         box-shadow: 10px 10px 5px -1px rgba(0, 0, 0, 0.14);
-        opacity: 0.7;
+        opacity: 0.5;
+        transition: transform 0.5s;
     }
 
     .sortable {
