dynamic column components and filtering on task ans group names and components

--- a/src/styles/components/_person-column.scss
+++ b/src/styles/components/_person-column.scss
@@ -1,8 +1,9 @@
 .person-column {
     position: relative;
     width: 250px;
-    .empty-users{
+
+    .empty-delegate-list{
         color: gray;
-        font-size: 21px;
+        font-size: 30px;
     }
 }
