--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,7 +12,7 @@
 
 // COMPONENTS
 @import 'components/board.list';
-@import 'components/board.preview';
+@import 'components/board-preview';
 @import 'components/board-header';
 @import 'components/task-preview';
 @import 'components/group-list';
@@ -33,4 +33,3 @@
 @import 'components/person-column';
 @import 'components/person-picker';
 @import 'components/person-preview';
-
