--- a/src/styles/components/_group-list.scss
+++ b/src/styles/components/_group-list.scss
@@ -33,7 +33,8 @@
         margin: 0;
         margin-bottom: 15px;
         .group-details {
-            @include flex(start, start, row);
+            @include flex(start, center, row);
+            margin-left: 20px;
         }
 
         li {
@@ -46,11 +47,11 @@
         }
 
         .el-dropdown {
-          
             button {
                 @include flex(center, center, row);
-                width: 30px;
-                height: 30px;
+                border: none;
+                margin: 0;
+                padding: 0;
                 border-radius: 50%;
             }
         }
