--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -33,4 +33,6 @@
 @import 'components/person-column';
 @import 'components/person-picker';
 @import 'components/person-preview';
+@import 'components/date-column';
+@import 'components/tags-column';
 
