before demo3 for today

--- a/src/styles/basics/_fonts.scss
+++ b/src/styles/basics/_fonts.scss
@@ -4,6 +4,11 @@
 }
 
 @font-face {
+    font-family: Lato-Light;
+    src: url('~@/assets/fonts/Lato-Light.ttf');
+}
+
+@font-face {
     font-family: Lobster;
     src: url('~@/assets/fonts/Lobster-Regular.ttf');
 }
