--- a/src/styles/components/_task-preview.scss
+++ b/src/styles/components/_task-preview.scss
@@ -5,7 +5,7 @@
     padding-inline-start: 5px;
     transition: 1s;
     @include flex(start, center, row);
-
+    // gap: 15px;
     position: relative;
 
     .date-picker .el-input__inner {
@@ -68,6 +68,7 @@
             border: none;
             border-radius: 50%;
             margin: 0;
+            margin-right: 15px;
             padding: 0;
             border-radius: 50%;
         }
