small improvements to columns

--- a/src/styles/components/_status-item.scss
+++ b/src/styles/components/_status-item.scss
@@ -3,4 +3,9 @@
     height: 2rem;
     padding: .3rem;
     color: whitesmoke;
+    font-weight: 100;
+
+    &:hover {
+        font-weight: 600;
+    }
 }
