--- a/src/styles/components/_person-column.scss
+++ b/src/styles/components/_person-column.scss
@@ -6,4 +6,13 @@
         color: gray;
         font-size: 30px;
     }
+
+    .avatar-list {
+        @include flex;
+
+        div {
+            height: 27px;
+        }
+    }
+
 }
