--- a/src/styles/components/_status-column.scss
+++ b/src/styles/components/_status-column.scss
@@ -7,5 +7,10 @@
         height: 100%;
         width: 100%;
         color: whitesmoke;
+        font-weight: 100;
+
+        &:hover {
+            font-weight: 600;
+        }
     }
 }
