after several more improvements to status picker

--- a/src/styles/components/_status-column.scss
+++ b/src/styles/components/_status-column.scss
@@ -2,15 +2,19 @@
     position: relative;
     width: 120px;
     
+    &:hover {
+        font-family: Lato;
+    }
+
     .status-text{
         @include flex;
         height: 100%;
         width: 100%;
         color: whitesmoke;
-        font-weight: 100;
+        font-weight: 600;
 
-        &:hover {
-            font-weight: 600;
-        }
+        // &:hover {
+        //     font-weight: 900;
+        // }
     }
 }
