--- a/src/styles/components/_status-item.scss
+++ b/src/styles/components/_status-item.scss
@@ -3,9 +3,9 @@
     height: 2rem;
     padding: .3rem;
     color: whitesmoke;
-    font-weight: 100;
+    font-weight: 600;
 
     &:hover {
-        font-weight: 600;
+        opacity: .6;
     }
 }
