more improvments before demo

--- a/src/styles/components/_board-details.scss
+++ b/src/styles/components/_board-details.scss
@@ -1,5 +1,6 @@
 .board-details {
     // padding-top: 20px;
+    overflow: auto;
     .main-board {
         // @include flex(start, start, row);
     }
