--- a/src/styles/components/_task-list.scss
+++ b/src/styles/components/_task-list.scss
@@ -34,7 +34,7 @@
         outline: none;
         font-family: Lato;
         font-size: 15px;
-       
+        margin-left: 22px;
         padding: 5px;
         border: none;
 
