--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -19,7 +19,7 @@
 // @import 'components/main-header';
 // @import 'components/main-footer';
 // @import 'components/homepage';
-// @import 'components/add-toy';
+@import 'components/activity-preview';
 @import 'components/home';
 @import 'components/task-details';
 @import 'components/board-details';
