--- a/src/styles/components/_task-list.scss
+++ b/src/styles/components/_task-list.scss
@@ -20,21 +20,21 @@
     form {
         position: relative;
         left: 0;
-        margin-left: -2px;
+        // margin-left: -2px;
     }
     input {
         position: relative;
         left: 0;
         height: 35px;
         width: 99.2%;
-        margin-left: 0;
+        margin-left: 32px;
         border: none;
         box-shadow: 0 0 1px 1px #dbdbdb;
         background: transparent;
         outline: none;
         font-family: Lato;
         font-size: 15px;
-        margin-left: 22px;
+        // margin-left: 22px;
         padding: 5px;
         border: none;
 
