--- a/src/styles/components/_task-preview.scss
+++ b/src/styles/components/_task-preview.scss
@@ -1,7 +1,7 @@
 .task-preview {
     background-color: whitesmoke;
     margin: 2px;
-    margin-left: 22px;
+    margin-left: 32px;
     height: 34px;
     padding-inline-start: 5px;
     transition: 1s;
@@ -14,13 +14,17 @@
     // }
     .dropdown {
         position: absolute;
-        left: -20px;
+        left: -35px;
         .el-button {
+            width: 30px;
+            height: 34px;
             @include flex(center, center, row);
             border: none;
             border-radius: 50%;
             margin: 0;
-            background-color: #ccc;
+            color: rgb(194, 194, 194);
+            padding: 2px;
+            background-color: transparent;
             margin-right: 15px;
             padding: 0;
             border-radius: 50%;
@@ -44,6 +48,7 @@
         @include flex(space-between, center, row);
         padding-inline-end: 10px;
         height: 100%;
+        min-width: 275px;
         flex: 2;
         border-inline-end: 1px white solid;
         cursor: grab;
@@ -71,7 +76,7 @@
         @include flex(center, center);
         width: 150px;
         height: 100%;
-        // flex: 1;
+        min-width: 75px;
         cursor: pointer;
         border-inline-end: 1px white solid;
     }
