--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -18,7 +18,7 @@
             }
         }
     }
-    section {
+    .back {
         background-image: url('~@/assets/img/monday1.png');
         background-size: cover;
         height: 82%;
@@ -28,7 +28,7 @@
         z-index: -1;
     }
 
-    button {
+    .aaa {
         cursor: pointer;
         height: 50px;
         width: 208px;
