--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -18,7 +18,7 @@
 @import 'components/group-list';
 // @import 'components/main-header';
 // @import 'components/main-footer';
-// @import 'components/homepage';
+@import 'components/login-signup';
 @import 'components/activity-preview';
 @import 'components/home';
 @import 'components/task-details';
