--- a/src/styles/components/_task-list.scss
+++ b/src/styles/components/_task-list.scss
@@ -22,12 +22,16 @@
         left: 0;
         // margin-left: -2px;
     }
+  
     input {
+        &.add-input{
+            margin-left: 32px;
+        }
         position: relative;
         left: 0;
         height: 35px;
         width: 99.2%;
-        margin-left: 32px;
+       
         border: none;
         box-shadow: 0 0 1px 1px #dbdbdb;
         background: transparent;
