--- a/src/styles/components/_group-list.scss
+++ b/src/styles/components/_group-list.scss
@@ -1,5 +1,14 @@
 .group-list {
     margin-top: 20px;
+    width: 100%;
+
+    .preview-group {
+        display: flex;
+        align-items: center;
+        flex: 2;
+        min-width: 260px;
+    }
+
     .flip-list-move {
         transition: transform 0.5s;
     }
@@ -13,9 +22,13 @@
     }
 
     .sortable {
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        gap: 0px;
+        margin-left: 15px;
         .task-list {
             width: 100%;
-           
         }
     }
 
@@ -36,8 +49,15 @@
         margin: 0;
         margin-bottom: 15px;
         .group-details {
-            @include flex(start, center, row);
-            margin-left: 20px;
+            // @include flex(space-between, center, row);
+            margin: 2px;
+            height: 34px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            position: relative;
+            // margin-left: 20px;
+            width: 100%;
 
             .el-dropdown {
                 .group-dropdown-menu {
@@ -79,6 +99,27 @@
             font-weight: 600;
             padding: 5px;
             margin-left: 5px;
+        }
+    }
+
+    .titles {
+        display: flex;
+        align-items: center;
+        height: 100%;
+
+        .column-title {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-weight: 600;
+            min-width: 180px;
+            height: 100%;
+            transition: 0.3s;
+            overflow: hidden;
+
+            &:hover {
+                background-color: #f5f5f5;
+            }
         }
     }
 }
