--- a/src/styles/components/_tags-column.scss
+++ b/src/styles/components/_tags-column.scss
@@ -1,9 +1,11 @@
-.tags-column .el-input__inner{
+.tags-column .el-input__inner {
     box-shadow: none;
 }
-.tags-column .el-select__input{
+.tags-column .el-select__input {
     box-shadow: none;
 }
 .tags-column .el-tag {
-    background-color: rgba(122, 158, 206, 0.61);
+    background-color: rgba(6, 37, 19, 0.61);
+    color: whitesmoke;
+    font-weight: 600;
 }
