--- a/src/styles/components/_task-list.scss
+++ b/src/styles/components/_task-list.scss
@@ -20,7 +20,10 @@
     form {
         position: relative;
         left: 0;
-        margin-left: -2px;
+        width: 100%;
+        margin-left: -7px;
+        opacity: 0.6;
+        // margin-left: 2px;
     }
     input {
         position: relative;
@@ -45,5 +48,61 @@
         padding-inline-start: 5px;
         font-size: 15px;
         // margin: 2px;
+
+        form {
+            background-color: #333;
+        }
+    }
+
+    .summery {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        background-color: #f5f6f8;
+        width: 720px;
+        margin-left: auto;
+
+        > * {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 180px;
+            height: 100%;
+        }
+
+        .tag-summery {
+            div {
+                color: rgb(random(255), random(255), random(255));
+            }
+            font-size: 12px;
+            gap: 2px 5px;
+            font-weight: 600;
+        }
+
+        .date-summery {
+            p {
+                font-size: 14px;
+                border: 2px solid #555;
+                border-radius: 20px;
+                padding: 0 8px;
+                font-weight: 600;
+            }
+        }
+        .status-summery {
+            height: 30px;
+            .battery {
+                display: flex;
+                align-items: center;
+                background-color: #ccc;
+                width: 100%;
+                height: 100%;
+
+                .done,
+                .stuck,
+                .in-progress {
+                    height: 100%;
+                }
+            }
+        }
     }
 }
