--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -16,8 +16,8 @@
 @import 'components/board-header';
 @import 'components/task-preview';
 @import 'components/group-list';
-// @import 'components/main-header';
-// @import 'components/main-footer';
+@import 'components/msg-preview';
+@import 'components/chat-box';
 @import 'components/login-signup';
 @import 'components/activity-preview';
 @import 'components/home';
