--- a/src/styles/components/_status-picker.scss
+++ b/src/styles/components/_status-picker.scss
@@ -1,4 +1,4 @@
-.status-picker{
+.status-picker {
     position: absolute;
     top: 2.2rem;
     left: 50%;
@@ -12,17 +12,19 @@
     border: 1px solid lightgray;
     box-shadow: 4px 4px 6px -3px rgba(0, 0, 0, 0.26);
     gap: 5px;
-    padding: .3rem;
-    transition: .2s;
+    padding: 0.3rem;
+    transition: 0.2s;
     z-index: 2;
 }
 
 // Vue transitions
 
-.status-picker-enter, .status-picker-leave-to{
+.status-picker-enter,
+.status-picker-leave-to {
     opacity: 0;
 }
 
-.status-picker-enter-active, .status-picker-leave-active{
-    transition: opacity .2s ease-in;
+.status-picker-enter-active,
+.status-picker-leave-active {
+    transition: opacity 0.2s ease-in;
 }
