--- a/src/styles/components/_group-list.scss
+++ b/src/styles/components/_group-list.scss
@@ -5,6 +5,8 @@
     .preview-group {
         display: flex;
         align-items: center;
+        height: 100%;
+        justify-content: space-between;
         flex: 2;
         min-width: 260px;
     }
@@ -24,7 +26,6 @@
     .sortable {
         display: flex;
         justify-content: start;
-        align-items: center;
         gap: 0px;
         margin-left: 15px;
         .task-list {
@@ -49,15 +50,12 @@
         margin: 0;
         margin-bottom: 15px;
         .group-details {
-            // @include flex(space-between, center, row);
-            margin: 2px;
+            @include flex(space-between, center, row);
+            // margin: 2px;
+            width: 100%;
             height: 34px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
             position: relative;
             // margin-left: 20px;
-            width: 100%;
 
             .el-dropdown {
                 .group-dropdown-menu {
@@ -102,15 +100,25 @@
         }
     }
 
-    .titles {
+    .group-title {
         display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        height: 100%;
+    }
+
+    .columns {
+        display: flex;
+        justify-content: center;
         align-items: center;
         height: 100%;
 
         .column-title {
+            position: relative;
+            right: 3px;
             display: flex;
-            justify-content: center;
             align-items: center;
+            justify-content: center;
             font-weight: 600;
             min-width: 180px;
             height: 100%;
