Added a lot improvments of css anf dunctions

--- a/src/styles/components/_board.list.scss
+++ b/src/styles/components/_board.list.scss
@@ -26,7 +26,7 @@
         border-bottom: 1px solid #ccc;
         margin-bottom: 20px;
 
-        .action {
+        .act-add {
             @include flex(start, center, row);
             font-size: 1rem;
             gap: 10px;
@@ -42,16 +42,61 @@
                 background-color: #c5c7d0;
             }
         }
+
+        .act-search {
+            i {
+                color: #2c3e50;
+            }
+
+            .el-input__inner {
+                width: 100%;
+                outline: none;
+                box-shadow: none;
+                border: none;
+
+                &::placeholder {
+                    color: #2c3e50;
+                }
+                transition: 0.2s;
+
+                &:hover:not(:focus) {
+                    background-color: #c5c7d0;
+                }
+
+                &:focus {
+                    border: 1px solid #454b75;
+                }
+            }
+        }
     }
 
     .board-list-items {
         @include flex(center, start, column);
         gap: 5px;
         width: 100%;
+
+        .title {
+            display: flex;
+            align-items: center;
+            gap: 5px;
+            font-size: 15px;
+            margin: 0;
+
+            i {
+                font-size: 13px;
+            }
+        }
+
+        .indication {
+            color: rgb(107, 107, 107);
+            font-size: 14px;
+            width: 100%;
+            margin: 0;
+            margin-top: 5px;
+            text-align: center;
+        }
     }
 }
-
-// #e6e9ef
 
 .board-list.close {
     width: 40px;
