--- a/src/styles/components/_board-details.scss
+++ b/src/styles/components/_board-details.scss
@@ -1,7 +1,16 @@
 .board-details {
     // padding-top: 20px;
     overflow: auto;
-    .main-board {
-        // @include flex(start, start, row);
+
+    .loader {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+
+        img {
+            width: 500px;
+        }
+        // line-height: 100vh;
     }
 }
