--- a/src/styles/components/_task-list.scss
+++ b/src/styles/components/_task-list.scss
@@ -32,27 +32,38 @@
 
         // margin-left: 2px;
     }
+    .edit-input {
+        position: relative;
+        left: 0;
+        width: 100%;
+        margin-left: -7px;
+        opacity: 0.6;
+        transition: 0.2s;
+        border: 1px dashed #555;
+        padding: 0px 5px;
+        &:focus-within {
+            opacity: 1;
+        }
+    }
 
     input {
         &.add-input {
             margin-left: 22px;
         }
+
         position: relative;
         left: 0;
+        // opacity: 1;
         height: 35px;
-        width: 99.2%;
+        width: 98.8%;
 
-        border: none;
         box-shadow: 0 0 1px 1px #dbdbdb;
         background: transparent;
         outline: none;
+        border: none;
         font-family: Lato;
         font-size: 15px;
-        // margin-left: 22px;
         padding: 5px;
-        border: none;
-
-        // box-shadow: 0 2px 10px black;
     }
     .style-task {
         border-inline-start: 6px rgb(55, 55, 105) solid;
@@ -61,7 +72,7 @@
         // margin: 2px;
 
         form {
-            background-color: #333;
+            // background-color: #333;
         }
     }
 
@@ -121,6 +132,11 @@
                     text-align: center;
                     font-size: 12px;
                     font-weight: 600;
+                    transition: 0.3s;
+
+                    &:hover {
+                        transform: scale(110%, 110%);
+                    }
                 }
             }
         }
