--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -35,4 +35,4 @@
 @import 'components/person-preview';
 @import 'components/date-column';
 @import 'components/tags-column';
-
+@import 'components/calendar';
