like and activity

--- a/src/styles/components/_group-list.scss
+++ b/src/styles/components/_group-list.scss
@@ -71,6 +71,15 @@
             &:hover {
                 box-shadow: 0 0 1px 1px #dbdbdb;
             }
+            .el-color-picker {
+                position: absolute;
+                right: 0;
+                top: 0px;
+                opacity:0;
+                .el-color-picker__trigger{
+                    width: 181px;
+                }
+            }
         }
 
         .el-dropdown {
@@ -85,8 +94,9 @@
             .group-dropdown-menu {
                 margin-right: 0;
             }
+            
         }
-
+  
         .input {
             border: none;
             box-shadow: 0 0 1px 1px #dbdbdb;
