--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -1,52 +1,81 @@
 .home {
     height: 100vh;
-    background-color: #3f3f91;
-    #nav {
-        @include flex(flex-end);
-        background-color: #595ad4;
-        gap: 20px;
+    
+    .header {
+        height: 60%;
+        margin-bottom: 20px;
+        #nav {
+            @include flex(flex-end);
+            // background-color: #595ad4;
+            gap: 20px;
 
-        a {
+            a {
+                font-family: Roboto;
+                font-weight: 900;
+                color: #060638;
+                transition: 0.3s;
+
+                &:hover {
+                    color: #b4b4e7;
+                    transform: scale(110%, 110%);
+                }
+            }
+        }
+        .back {
+            background-image: linear-gradient(135deg, #98729e, #fab0dc);
+            background-size: cover;
+            height: 60%;
+            width: 100%;
+            position: absolute;
+            top: 0;
+            border-radius: 20% 0 20% 0;
+            /* right: 0; */
+            z-index: -1;
+        }
+
+        .aaa {
+            cursor: pointer;
+            height: 50px;
+            width: 208px;
+            margin-top: 20px;
+            border-radius: 15px;
+            border: none;
+            background-color: rgb(253, 253, 253);
+            color: #595ad4;
+            font-size: 19px;
             font-family: Roboto;
-            font-weight: 900;
-            color: #060638;
-            transition: 0.3s;
-
+            text-transform: capitalize;
+            font-weight: 600;
+            box-shadow: 0 0 10px black;
+            transition: 1s;
+            margin-top: -60px;
             &:hover {
-                color: #b4b4e7;
-                transform: scale(110%, 110%);
+                opacity: 0.7;
+                color: rgb(121, 121, 121);
             }
         }
     }
-    .back {
-        background-image: url('~@/assets/img/monday1.png');
-        background-size: cover;
-        height: 82%;
-        width: 100%;
-
-        /* right: 0; */
-        z-index: -1;
-    }
-
-    .aaa {
-        cursor: pointer;
-        height: 50px;
-        width: 208px;
-        margin-top: 20px;
-        border-radius: 15px;
-        border: none;
-        background-color: rgb(253, 253, 253);
-        color: #595ad4;
-        font-size: 19px;
-        font-family: Roboto;
-        text-transform: capitalize;
-        font-weight: 600;
-        box-shadow: 0 0 10px black;
-        transition: 1s;
-        margin-top: -60px;
-        &:hover {
-            opacity: 0.7;
-            color: rgb(121, 121, 121);
+    .info{ 
+         @include flex;
+         gap: 10%;
+         flex-wrap: wrap;
+        .icon{
+          
+            height: 120px;
+            width: 120px;
+            background-image: linear-gradient(135deg, #98729e, #fab0dc);
+            border-radius: 50%;
+            i{
+                position: relative;
+                top:50%;
+               
+                transform: translateY(-50%);
+                font-size: 40px;
+                color: white;
+                text-align: center;
+            }
+        
         }
     }
+    // background-color: #3f3f91;
 }
