--- a/src/styles/components/_chat-box.scss
+++ b/src/styles/components/_chat-box.scss
@@ -1,26 +1,65 @@
-.chat-box{
-    p,
-    textarea {
-        text-align: left;
-        color: #676879;
-        width: 100%;
-        height: 100%;
-        line-height: 1.5;
-        font-family: Roboto;
-        font-weight: 400;
-        font-size: 14px;
-        border: none;
-        border-radius: 2px;
-        outline: none;
-        transition: 0.2s;
-        padding: 3px 4px;
+.chat-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+    // align-items: center;
+    .chat-header {
+        width: 90%;
+        margin: auto;
+        display: flex;
+        align-items: center;
+        justify-content: start;
+        gap: 5px;
+        flex-direction: column;
 
-        &:hover {
-            box-shadow: 0 0 1px 1px #c5c7d0;
+        .inputs {
+            width: 100%;
+            font-family: Roboto;
+            input {
+                width: 100%;
+                padding: 10px 15px;
+                border: 1px solid #409eff;
+                outline: none;
+                border-radius: 7px;
+                font-family: Roboto;
+
+                &:hover {
+                    background-color: rgb(224, 224, 224);
+                }
+            }
+
+            .el-textarea {
+                font-family: Roboto;
+            }
         }
 
-        &:focus {
-            box-shadow: 0 0 1px 1px #c5c7d0;
+        .btn {
+            align-self: flex-end;
         }
     }
+    // p,
+    // textarea {
+    //     text-align: left;
+    //     color: #676879;
+    //     width: 100%;
+    //     height: 100%;
+    //     line-height: 1.5;
+    //     font-family: Roboto;
+    //     font-weight: 400;
+    //     font-size: 14px;
+    //     border: none;
+    //     border-radius: 2px;
+    //     outline: none;
+    //     transition: 0.2s;
+    //     padding: 3px 4px;
+
+    //     &:hover {
+    //         box-shadow: 0 0 1px 1px #c5c7d0;
+    //     }
+
+    //     &:focus {
+    //         box-shadow: 0 0 1px 1px #c5c7d0;
+    //     }
+    // }
 }
