--- a/src/styles/components/_group-list.scss
+++ b/src/styles/components/_group-list.scss
@@ -133,10 +133,23 @@
             min-width: 180px;
             height: 100%;
             transition: 0.3s;
+            cursor: pointer;
             overflow: hidden;
 
             &:hover {
                 background-color: #f5f5f5;
+            }
+
+            i {
+                font-size: .8rem;
+                color: lightgray;
+                padding-left: 9px;
+                padding-top: 4px;
+                
+                &:first-of-type {
+                    padding-left: 0;
+                    padding-right: 9px;
+                }
             }
         }
     }
