--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -36,3 +36,4 @@
 @import 'components/date-column';
 @import 'components/tags-column';
 @import 'components/calendar';
+@import 'components/user-profile';
