--- a/src/styles/components/_person-column.scss
+++ b/src/styles/components/_person-column.scss
@@ -9,10 +9,22 @@
 
     .avatar-list {
         @include flex;
+        // margin: 0 auto;
 
         div {
-            height: 27px;
+            // margin: 0 auto;
+            // height: 27px;
+            font-weight: 600;
+            margin-inline: -2.5px;
+        }
+
+        .vue-avatar--wrapper {
+            span {
+                font-weight: 600;
+                font-family: Lato;
+                font-size: 12px;
+                color: rgb(117, 117, 117);
+            }
         }
     }
-
 }
