--- a/src/styles/components/_task-list.scss
+++ b/src/styles/components/_task-list.scss
@@ -80,9 +80,9 @@
         font-size: 15px;
         // margin: 2px;
 
-        form {
-            // background-color: #333;
-        }
+        // form {
+        //     // background-color: #333;
+        // }
     }
 
     .summery {
